
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int MYSQL ;


 int CLIENT_FOUND_ROWS ;
 int COM_CREATE_DB ;
 int EXIT_FAILURE ;
 int EXIT_SUCCESS ;
 int mysql_close (int *) ;
 int * mysql_init (int *) ;
 int mysql_real_connect (int *,char*,char*,char*,int *,int ,int *,int ) ;
 int puts (char*) ;
 int simple_command (int *,int ,char*,int ,int ) ;
 int strlen (char*) ;

int
main (int argc, char **argv)
{
  MYSQL *mysql = ((void*)0);

  mysql = mysql_init (mysql);

  if (!mysql)
    {
      puts ("Init faild, out of memory?");
      return EXIT_FAILURE;
    }

  if (!mysql_real_connect (mysql,
                           "localhost",
                           "monty",
                           "montypython",
                           ((void*)0),
                           0,
                           ((void*)0),
                           CLIENT_FOUND_ROWS ))
    {
      puts ("Connect failed\n");
    }
  else
    {
      puts ("Connect OK\n");

        simple_command(mysql, COM_CREATE_DB, argv[1], strlen(argv[1]), 0);

    }

  mysql_close (mysql);

  return EXIT_SUCCESS;
}
